--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.6",
     "express": "^4.17.3",
+    "jwt-decode": "^3.1.2",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "mysql": "^2.18.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
