--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "element-ui": "^2.15.6",
     "express": "^4.17.3",
     "jwt-decode": "^3.1.2",
