--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
     "element-ui": "^2.15.6",
