--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.8.3",
-    "crypto-js": "^4.1.1",
     "element-ui": "^2.15.6",
     "express": "^4.17.3",
     "jwt-decode": "^3.1.2",
@@ -20,6 +19,7 @@
     "mysql": "^2.18.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
