--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-gyp": "^9.0.0"
   }
 }
