--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "node-gyp": "^9.0.0"
   }
