--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.2",
     "mysql": "^2.18.1",
     "node-gyp": "^9.0.0"
   }
