--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^3.4.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.6",
     "express": "^4.17.3",
