--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^3.4.1",
     "core-js": "^3.8.3",
+    "echarts": "^4.9.0",
     "element-ui": "^2.15.6",
     "express": "^4.17.3",
     "jwt-decode": "^3.1.2",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "mysql": "^2.18.1",
+    "v-charts": "^1.19.0",
+    "v-charts-v2": "^2.0.9",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vue-toasted": "^1.1.28",
