--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.2",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node-gyp": "^9.0.0"
   }
